# ChangeLog for dev-util/scons
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/scons/ChangeLog,v 1.58 2008/07/19 12:31:48 hawking Exp $

*scons-0.98.5 (19 Jul 2008)

  19 Jul 2008; Ali Polatel <hawking@gentoo.org> +scons-0.98.5.ebuild:
  Version bump.

  14 Jun 2008; Zac Medico <zmedico@gentoo.org> scons-0.97.ebuild,
  scons-0.98.3.ebuild, scons-0.98.4.ebuild:
  Bug #226505 - For compatibity with phase execution order in
  >=portage-2.1.5, call has_version inside pkg_preinst instead of
  pkg_postinst.

*scons-0.98.4 (29 May 2008)

  29 May 2008; Ali Polatel <hawking@gentoo.org> -scons-0.96.1.ebuild,
  -scons-0.96.94.ebuild, +scons-0.98.4.ebuild:
  Version bump. Drop old.
