@@ -2,19 +2,15 @@
 Hash: SHA1
 
 DIST scons-0.97.tar.gz 439523 RMD160 31af35ef62fe56a4faf291a4d6cb73de5a17d81f SHA1 732980f0f4dba7cba32fffca0b533497ef751afc SHA256 195df54afedd60767e55393187df0f1e7e0ddb3a46347a5ee82d5050f964c3ba
-DIST scons-0.98.3.tar.gz 537687 RMD160 c1be0d3fc070e0957d52c4632539a17f3d349ad8 SHA1 0378dee14ace1601fce881a35d109115d3c6a014 SHA256 e9170fae07cf5eb0d9e6b519198d87811dc9905166591e913dcab3a01fee1b09
-DIST scons-0.98.4.tar.gz 538335 RMD160 5e62877feaec7b543a3062c8c47eaa04c63a866b SHA1 b61764fe6fc7562f5034b71885323604cd6c74f5 SHA256 872b6e1da0003cf3b709e31af7b55721a1730690e1dd6a4a71612c7eb22602df
-DIST scons-0.98.5.tar.gz 539709 RMD160 002f9e24c516bef034dd814f81d0db6c8ab8401c SHA1 d2ab8835fe850c6aea1ae22fb3f4eea777feee14 SHA256 d240fd15070bb1dece54293343f0054e966c0b85548763c40faf4d9ee74dca77
-EBUILD scons-0.97.ebuild 1223 RMD160 2073ac6cda489a1e16a8117f614ef20f64947fc8 SHA1 8bd2dff85730982bd27a42ee33f9ecb5e3712db0 SHA256 04721c8854ae629c5eda9510a946afafb5c4692457193840395419df584b7639
-EBUILD scons-0.98.3.ebuild 1232 RMD160 ddf568d6fa4931ee97d6ee46056b1a3966a138b3 SHA1 bbe5fc2f897c614c969e425f5aa983724d118a70 SHA256 80a1c2d82906381c4817cc02823825f60a322b074c9e35362929599fb7bb29c6
-EBUILD scons-0.98.4.ebuild 1232 RMD160 93fb04e08d3cfd545d2db3f5d1024fe0932caccd SHA1 7e2fb6a5391d2e9f7850be00a4e45cb6acadc7bd SHA256 2bc5b3a0f8bec0e44b94ff52af6ba66f6ca3826af62507b72a3bd7d7b623c92a
-EBUILD scons-0.98.5.ebuild 1232 RMD160 fe249fdcbe4f2f56cdd81e16f935551bda3aee02 SHA1 22e57a90e72ce669cf9c808fc0bb3a182f01c35e SHA256 57a0a3e5d717e154d75af83de069f6d6c28198a7b4abe48b1a31ac4e774024c7
-MISC ChangeLog 747 RMD160 f45395bba79f6d37063567da2a6b1714b28c3b2e SHA1 65ceb1da12347c84492e3bcc2fd86a8dce408c40 SHA256 952b3e71a4353aab966737a9315e91e3f6c465dfb3d50a03edb6715480ec8a71
+DIST scons-1.0.0.tar.gz 541330 RMD160 0c74d061316ea73f82a0b2c316474bc33b486f23 SHA1 0d46f078e9a58a3e1cc6d41eb4966c448463d134 SHA256 3d944dc1b2753bac0a3fa53323872b19459b5709d299117248b9b508ecf1de8e
+EBUILD scons-0.97.ebuild 1152 RMD160 02d0d8d36c3aaaef181a1bdeb0aeb87e43a209fa SHA1 5cbd1dad354e2c3785f00d7cc0cb3c81642584f9 SHA256 248a68102381b040107da4b406b477cb072411c9cfa92e351cd91f8d3af483c9
+EBUILD scons-1.0.0.ebuild 1158 RMD160 636d752a52fa44104f9c398b1487c46199c830f4 SHA1 1905702f925a65689af580d8ce5984bbbb97e515 SHA256 97e570080441bc6b885d750831c50860be96ca4b32f94ff8847fc09e5a858432
+MISC ChangeLog 1025 RMD160 2da374828f001d87afeeccf8f28851c8174ee616 SHA1 6ae24d56d8a0eb917d77fe11126087dca9802eab SHA256 99e2fe98aac23adfb4e9b07cbd6c6875ac1bb6127e96871676ba300185f64399
 MISC metadata.xml 259 RMD160 e07f81006af8091709da130bf7766960545d08b1 SHA1 d68efa412545d069a60b0e13c20b910a5680eeaa SHA256 d20eefe0b0976cc928c0e17b9e5ba6c670f30ebb49086955e6f6b335fbb597ef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkiB3sIACgkQQU4yORhF8iDz+QCeJZGCqY7V5bOI4uGoW8seBsY8
-eIAAmwVj6Jg057TzmjLuIu8BjGEMG06u
-=Fhkh
+iEYEARECAAYFAkirXbwACgkQdIssYB9vBoPfKwCdEIAYHSXDPjQAEU1K7UL/Qwlh
+RegAnRG3v+ZxwbaLwBfmCNW4BOy9BG7h
+=g7I6
 -----END PGP SIGNATURE-----
